Removes references to specific mobile platforms (along with some tutorial content to be re-added back shortly in a more generic form).
PiperOrigin-RevId: 620083133